--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "binance_spot_connector_rust"
-version = "1.0.2"
+version = "1.1.0"
 authors = ["Binance"]
 edition = "2021"
 resolver = "2"
@@ -29,10 +29,10 @@ url = "2.2.2"
 rust_decimal = "1.24.0"
 http = "0.2.7"
 strum = { version = "0.24", features = ["derive"] }
-rsa = { version = "0.7.1", features = ["pkcs5"] }
 rand = "0.8.5"
-signature = "1.6.4"
+signature = "2.2.0"
 base64 = "0.13.1"
+ed25519-dalek = { version = "2.1.0", features = ["serde", "zeroize", "rand_core", "digest", "pkcs8", "pem"] }
 
 # enable-ureq
 ureq = { version = "2.4.0", optional = true }
